[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/CityMap/CityMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main.gd" type="Script" id=2]
[ext_resource path="res://src/Modules/Camera/CameraController.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/UserInterface.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="CityMap" parent="." instance=ExtResource( 1 )]

[node name="CameraController" parent="." instance=ExtResource( 3 )]
position = Vector2( 59.5, 190 )
zoom = Vector2( 0.5, 0.5 )

[node name="HeartSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UserInterface" parent="." instance=ExtResource( 4 )]
[connection signal="timeout" from="HeartSpawnTimer" to="." method="_on_HeartSpawnTimer_timeout"]
